# pyapp-messaging

./: .gitignore  LICENSE  README.rst  docker-compose.yaml  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: python-app.yml
docs/source/: conf.py  index.rst
pyapp_ext/: messaging_cli.py
pyapp_ext/messaging/: __init__.py  bases.py  checks.py  default_settings.py  exceptions.py  factory.py  serialisation.py
pyapp_ext/messaging/aio/: __init__.py  bases.py  factory.py  queues.py
pyapp_ext/messaging/asyncio/: __init__.py  bases.py  checks.py  cli.py  factory.py  queues.py
pyapp_ext/messaging/cli/: __init__.py
pyapp_ext/messaging/sio/: __init__.py  bases.py
sample/: __init__.py  __main__.py  cli.py  default_settings.py
tests/: conftest.py  test_bases.py  test_checks.py  test_cli.py  test_extension.py  test_factory.py  test_serialisation.py
tests/aio/: mock_bases.py  test_bases.py  test_checks.py  test_extension.py  test_factory.py  test_queues.py
tests/asyncio_/: test_bases.py  test_checks.py  test_cli.py  test_extension.py  test_factory.py  test_queues.py
tests/cli/: test_cli.py
tests/sio/: mock_bases.py  test_bases.py  test_checks.py  test_extension.py  test_factory.py
