[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "pyapp-messaging"
version = "1.0b1"
description = "Common messaging extension. Provides base messaging interfaces."
authors = ["Tim Savage <tim@savage.company>"]
license = "BSD-3-Clause"
packages = [
    { include = "pyapp_ext" },
    { include = "tests", format = "sdist" },
]
readme = "README.rst"
repository = "https://github.com/pyapp-org/pyapp-messaging"
keywords = ["framework", "application", "queuing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = "^3.6"
pyapp = "^4.3.0"

[tool.poetry.dev-dependencies]
asyncmock = "^0.4"
pytest = "^6.0.1"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.12.0"

[tool.poetry.plugins."pyapp.extensions"]
"pyapp-messaging.aio" = "pyapp_ext.messaging.aio:Extension"
"pyapp-messaging.cli" = "pyapp_ext.messaging.cli:Extension"
"pyapp-messaging.sio" = "pyapp_ext.messaging.sio:Extension"
