[metadata]
name = pyApp-Messaging
author = Tim Savage
author-email = tim@savage.company
description = Common messaging extension. Provides base messaging services that other service build on
long-description = file: README.rst
url = https://github.com/pyapp-org/pyapp-messaging
platforms = any
license = BSD-3-Clause
licence_files =
    LICENSE
keywords =
    application
    framework
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Libraries :: Application Frameworks
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.6
packages = pyapp_ext.messaging
test_suite = tests
setup_requires =
    pytest-runner
    setuptools >=38.3
install_requires =
    pyapp >=4.0.4
tests_require =
    mock
    pytest
    pytest-cov

[options.entry_points]
pyapp.extensions =
    pyapp-messaging = pyapp_ext.messaging:Extension
    pyapp-messaging-async = pyapp_ext.messaging.asyncio:Extension
    pyapp-messaging-cli = pyapp_ext.messaging_cli:Extension

[options.extras_require]
dev =
    docutils
    black

[aliases]
test = pytest

[tool:pytest]
addopts =
    --cov=pyapp_ext.messaging

[check]
metadata = true
restructuredtext = true
strict = true
